Fixing background and overflow-y

--- a/frontend-chat/styles/main.css
+++ b/frontend-chat/styles/main.css
@@ -11,46 +11,32 @@
 * {
     box-sizing: border-box;
 }
-
+html
 body {
     font-family: Poppins;
-    height: 100%;
-    width: 100vw;
-    overflow-y: hidden; 
-    overflow-x: hidden;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
 } 
 
-.bg{
-    position:absolute;
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
-    height:100%;
-    width:100%;
+.container{
+    width: 100%;
+    height: 100%;
+    padding: 24px 0;
+
+    overflow-y: scroll;
     background: linear-gradient(359deg, #ba00ff, #0f90a5);
     background-size: 400% 400%;
 
     -moz-animation: AnimationName 13s ease infinite;
     animation: AnimationName 13s ease infinite;
-    z-index: -999;
 }
 
-@-moz-keyframes AnimationName {
-    0%{background-position:50% 0%}
-    50%{background-position:51% 100%}
-    100%{background-position:50% 0%}
-}
-@keyframes AnimationName {
-    0%{background-position:50% 0%}
-    50%{background-position:51% 100%}
-    100%{background-position:50% 0%}
-}
 form {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   }
   
   input {
@@ -62,7 +48,7 @@ form {
     height: 2rem;
     outline: none;
     box-shadow: 0px 5px 8px #1c1b1b;
-}
+  }
   
   input::placeholder {
     font-family: Poppins;
@@ -77,50 +63,61 @@ form {
     justify-content: center;
     width: 500px;
   }
-
- .display > span{
+  
+  .display > span{
     background-color: #2a3d44;
     font-size: 12px;
     color: #ca69ca;
     margin-top: 20px;
     text-align: center;
     border-radius: 10px;
-
-}
-
+    
+  }
+  
   span {
-      border: none;
-      border-radius: 1rem;
-      width: 200px;
-      margin: 15px;
-      padding: 15px;
-      box-shadow: 0px 2px 8px #1c1b1b;
+    border: none;
+    border-radius: 1rem;
+    width: 200px;
+    margin: 15px;
+    padding: 15px;
+    box-shadow: 0px 2px 8px #1c1b1b;
   }
-
-  span:nth-child(2n + 1)::after {
-      display: block;
-      background-color: black;
-      margin-left: 170px;
-      margin-bottom: -30px;
-      background-color: #17252a;
+  
+  span:nth-child(odd)::after {
+    display: block;
+    background-color: black;
+    margin-left: 170px;
+    margin-bottom: -30px;
+    background-color: #17252a;
   }
-
-  span:nth-child(2n + 2)::after {
+  
+  span:nth-child(even)::after {
     display: block;
     background-color: black;
     margin-right: 170px;
     margin-bottom: -30px;
     background-color: #101a1d;
-}
+  }
   
-  span:nth-child(2n + 1) {
+  span:nth-child(odd) {
     text-align: right;
     background-color: #070c0e;
     align-self: flex-end;
   }
   
-  span:nth-child(2n + 2) {
-      text-align: left;
-      background-color: #131c1f;
-      align-self: flex-start;
+  span:nth-child(even) {
+    text-align: left;
+    background-color: #131c1f;
+    align-self: flex-start;
+  }
+
+  @-moz-keyframes AnimationName {
+      0%{background-position:50% 0%}
+      50%{background-position:51% 100%}
+      100%{background-position:50% 0%}
+  }
+  @keyframes AnimationName {
+      0%{background-position:50% 0%}
+      50%{background-position:51% 100%}
+      100%{background-position:50% 0%}
   }
